# avm-semantics

./: .envrc  .gitignore  .gitmodules  Dockerfile  Jenkinsfile  LICENSE.md  Makefile  README.md  envrc  flake.nix  kavm  kbuild.toml  notes.md  parse-avm-simulation.sh
.github/workflows/: master-push.yml  test.yml  update-version.yml
docs/: 28-10-2022-coverage.html  algo-grant-application.md  kavm-testing-tutorial.md
example/: generate_proofs.py  kavm-mini-spec.md  kavm-mini.md  test.teal  verification.md
hooks/: CMakeLists.txt  Makefile  README.md  algorand.cpp  algorand.h  base.cpp  base.h  clients.cpp  example.cpp  hooks.cpp  kbuild.toml  mnemonic.cpp  mnemonic.h
kavm/: .cruft.json  .flake8  Makefile  README.md  pyproject.toml  pyrightconfig.json
kavm-algod/: .cruft.json  Makefile  README.md  docker-compose.yml  pyproject.toml
kavm-algod/src/kavm_algod/: __main__.py  algod.py
kavm-algod/src/kavm_algod/adaptors/: transaction.py
kavm-algod/src/tests/: conftest.py  constants.py  test_algod.py
kavm-algod/src/tests/contracts/calculator/: test_calculator.py
kavm-pyk/: .cruft.json  README.md  pyproject.toml
kavm/requirements/: base.txt  dev.txt
kavm/src/: __main__.py  kavm.py
kavm/src/adaptors/: account.py  transaction.py
kavm/src/kavm/: __main__.py  algod.py  claims.py  constants.py  create_pyteal_contract.py  kavm.py  kompile.py  proof.py  prover.py  pyk_utils.py  scenario.py
kavm/src/kavm/adaptors/: account.py  algod_account.py  algod_application.py  algod_transaction.py  application.py  teal_key_value.py  transaction.py
kavm/src/kavm/kast/: factory.py
kavm/src/profiling/: __main__.py
kavm/src/tests/: conftest.py  test_algod.py
kavm/src/tests/adaptors/: test_transaction.py
kavm/src/tests/algod_integration/: algosdk_utils.py  test_faucet.py
kavm/src/tests/algod_integration/contracts/: count_calls_pyteal.py  test_calculator.py  test_count_calls.py  test_trivial.py
kavm/src/tests/algod_integration/contracts/calculator/: approval.teal  contract.json  contract.py  interact.py  interact_kavm.py  sandbox.py  test_calculator.py  test_calculator_hypothesis.py
kavm/src/tests/algod_integration/contracts/kcoin_vault/: client.py  conftest.py  kcoin_vault_pyteal.py  spec.py  test_mint_burn.py  test_specs.py
kavm/src/tests/algod_integration/contracts/two-way-trading/: contract.py  interact.py  interact_kavm.py
kavm/src/tests/algod_integration/contracts/two_way_trading/: __main__.py  client.py  contract.py  test_contract.py
kavm/src/tests/contracts/calculator/: test_calculator.py
kavm/src/tests/scenarios/: test_avm_semantics.py
kavm/src/tests/semantics/: test_avm_scenarios.py  test_bison_parsers.py
kavm/src/tests/unit/: test_account_encoding.py  test_algod_account.py  test_algod_application.py  test_algod_transaction.py  test_application_encoding.py  test_avm_semantics.py  test_kmapcell.py  test_pyk_utils.py  test_teal_key_value.py  test_transaction_encoding.py
kavm/tests/: conftest.py
kavm/tests/algod_integration/: test_faucet.py
kavm/tests/algod_integration/contracts/calculator/: test_calculator.py
kavm/tests/unit/: test_transaction_encoding.py
kavm_algod/: .flake8  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
kavm_algod/kavm_algod/: __main__.py  algod.py  pyk_utils.py
kavm_algod/kavm_algod/adaptors/: transaction.py
kavm_algod/kavm_algod/kavm_algod.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
kavm_algod/requirements/: dev.txt
kavm_algod/src/: __main__.py  algod.py  constants.py  kavm.py  pyk_utils.py
kavm_algod/src/adaptors/: account.py  transaction.py
kavm_algod/tests/: conftest.py  constants.py  test_algod.py
kavm_algod/tests/adaptors/: test_transaction.py  test_transaction_encoding.py
kavm_algod/tests/algod_integration/: test_faucet.py
kavm_algod/tests/algod_integration/contracts/calculator/: test_calculator.py
kavm_algod/tests/contracts/auction/: auction.approval.teal  auction.py  test_auction.py
kavm_algod/tests/contracts/calculator/: test_calculator.py
kavm_algod/tests/contracts/coinflip/: coinflip.approval.teal  coinflip.clear.teal  test_coinflip.py
kavm_algod/tests/unit/: test_transaction_encoding.py
kavm_pyk/: Makefile  setup.cfg
lib/scripts/: parse-avm-simulation.sh  parse-teal-programs.sh  post-process-coverage
package/: version  version.sh
proofs/: calculator_pyteal.py  call_calculator_pyteal.py  create_pyteal_contract.py
scripts/: parse-teal-programs.sh
tests/: #teal-test.template.avm-execution#  failing-avm-simulation.list  failing-symbolic.list
tests/avm/: count-calls.sh
tests/hooks/: generate-interpreter.sh  kavm-hooks-tests.k  test_hooks.py
tests/json-scenarios/: app-account.json  app-clear-state-own.json  app-clear-state.json  app-global-get-ex-app-unavailable.json  app-global-get-ex.json  app-local-del.json  app-local-get-ex-app-unavailable.json  app-local-get-ex.json  app-local-get-fake-account.json  app-local-get-not-opted-in.json  app-local-get.json  app-local-put-not-opted-in.json  app-opted-in-account-invalid.json  app-opted-in-account-invalid2.json  app-opted-in-app-invalid.json  app-opted-in-ill-typed.json  app-opted-in-offsets.json  app-opted-in.json  app-params-get.json  appAccountParams.json  application-id.json  arithmetic-add-mul-div-sub.json  arithmetic-add-overflow.json  arithmetic-div0.json  arithmetic-ill-typed.json  asset-created-setup.json  asset-delete-no-perm.json  asset-holding-get-asset-invalid.json  asset-holding-get.json  asset-holding-setup.json  asset-modify.json  asset-params-get.json  asset-transfer-frozen.json  asset-transfer-insufficient-balance.json  asset-transfer-not-opted-in.json  asset-transfer-zero-not-exist.json  asset-transfer.json  balance-account-not-available.json  balance-offset-out-of-bounds.json  balance-offset.json  (+97 more)
tests/scenarios/: app-account.0.avm-simulation  app-account.avm-simulation  app-global-get-ex-app-unavailable.7.avm-simulation  app-global-get-ex-app-unavailable.fail.avm-simulation  app-global-get-ex.0.avm-simulation  app-global-get-ex.avm-simulation  app-local-del.0.avm-simulation  (+199 more)
(+282 files in other folders)
