[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kavm-algod"
version = "0.1.0"
description = "KAVM backend for py-algorand-sdk"
authors = [
    "Runtime Verification, Inc. <contact@runtimeverification.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
py-algorand-sdk = "1.15.0"

[tool.poetry.dev-dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pyk = { path = "../deps/k/pyk" }
pytest = "*"

[tool.poetry.scripts]
kavm-algod = "kavm_algod.__main__:main"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.mypy]
disallow_untyped_defs = "True"
show_column_numbers = "True"
