[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kavm"
version = "0.1.97"
description = "Python bindings and command-line interface for KAVM"
authors = [
    "Runtime Verification, Inc. <contact@runtimeverification.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
py-algorand-sdk = "1.20.1"
pyteal = "0.20.1"
tabulate = "0.8.10"
types-tabulate = "0.8.10"
pyk = { git = "https://github.com/runtimeverification/pyk.git", tag="v0.1.362" }

[tool.poetry.group.dev.dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pytest = "*"
pytest-xdist = "*"
pytest-profiling = "*"
hypothesis= "*"
pycobertura = "*"

[tool.poetry.scripts]
kavm = "kavm.__main__:main"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.autoflake]
recursive = true
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.mypy]
disallow_untyped_defs = "True"
show_column_numbers = "True"

[[tool.mypy.overrides]]
module = [
    "algosdk.*",
    "msgpack",
]
ignore_missing_imports = true
