[build-system]
requires = [
  "setuptools >= 51.0.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "kavm_algod"
description = "KAVM backend for py-algorand-sdk"
readme = "README.md"
requires-python = ">= 3.8.*, < 3.10"
dynamic = ["version"]

[project.scripts]
kavm-algod = "kavm_algod.__main__:main"

[tool.setuptools.package-dir]
kavm_algod = "src"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
show_column_numbers = "True"
exclude = "(venv-dev|venv-prod)"

[tool.black]
exclude = "(venv-dev|venv-prod)"
target_version = ["py38"]
line-length = 88
skip-string-normalization="True"

[tool.isort]
py_version=38
profile = "black"
skip = ["venv-dev", "venv-prod"]
multi_line_output=3
include_trailing_comma=true
ensure_newline_before_comments=true
line_length = 88