[metadata]
name = kavm_algod
version = 0.0.1

[options]
python_requires = >= 3.9.*, < 3.10
packages = find:
package_dir =
    =kavm_algod

[options.package_data]
* = py.typed

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    kavm-algod = kavm_algod.__main__:main

[mypy]

[flake8]
ignore = E501

[isort]
multi_line_output=3
include_trailing_comma=true
ensure_newline_before_comments=true